fix z-index issue

--- a/nds-dev/css/templates/_related-links.scss
+++ b/nds-dev/css/templates/_related-links.scss
@@ -26,6 +26,7 @@
   padding-inline: var(--nora-space-400);
   position: relative;
   overflow: hidden;
+  z-index: 0;
 
   &::after {
     display: block;
